# gtk-qq

./: .gitignore  Cargo.toml  README.md  meson.build
.github/workflows/: build.yaml  check.yaml  ci.yaml  clippy.yaml  fmt.yaml
assets/: meson.build  resources.gresource.xml
libs/resource-loader/: Cargo.toml
libs/resource-loader/src/: lib.rs  model.rs  resource_directories.rs  static_data.rs  utils.rs
libs/resource-loader/src/configs/: avatar.rs  client.rs  config.rs  local_db.rs  mod.rs  temporary.rs
libs/resource-loader/src/ops/: avatar.rs  client.rs  database.rs  mod.rs  template.rs  temporary.rs
libs/resource-loader/src/ops/avatar/: mod.rs
libs/widgets/: Cargo.toml
libs/widgets/src/: lib.rs
libs/widgets/src/captcha/: mod.rs  payloads.rs  widget.rs
libs/widgets/src/device_lock/: mod.rs  payloads.rs  widgets.rs
libs/widgets/src/link_copier/: component.rs  mod.rs  payloads.rs  widgets.rs
libs/widgets/src/pwd_login/: component.rs  mod.rs  payloads.rs  widgets.rs
libs/widgets/src/qrcode_login/: background.rs  component.rs  mod.rs  payloads.rs  widgets.rs
src/: actions.rs  app.rs  config.rs.in  handler.rs  login.rs  main.rs  meson.build
src/app/: mod.rs
src/app/login/: mod.rs  service.rs
src/app/login/captcha/: mod.rs
src/app/login/device_lock/: mod.rs
src/app/login/service/: handle_respond.rs  login_server.rs  pwd_login.rs  token.rs
src/app/main/: mod.rs
src/app/main/chatroom/: message_group.rs  mod.rs
src/app/main/sidebar/: chat_item.rs  contact_group.rs  friends_group.rs  group_item.rs  mod.rs
src/app/main/sidebar/chats/: chat_item.rs  mod.rs
src/app/main/sidebar/contact/: friends_group.rs  group_item.rs  mod.rs
src/app/main/sidebar/contact/friends/: friends_group.rs  mod.rs  search_item.rs
src/app/main/sidebar/contact/groups/: group_item.rs  mod.rs
src/db/: fs.rs  mod.rs  sql.rs
src/global/: mod.rs
src/pages/: login.rs  main.rs  mod.rs
src/pages/login/: mod.rs
src/pages/main/: chatroom.rs  chats_item.rs  mod.rs
src/pages/main/chatroom/: message.rs  message_group.rs  mod.rs
src/pages/main/sidebar/: chat_item.rs  contact_group.rs  mod.rs  user_item.rs
src/styles/: style.css
src/utils/: mod.rs
src/utils/avatar/: error.rs  mod.rs
src/utils/avatar/loader/: group.rs  mod.rs  user.rs
src/utils/message/: content.rs  message.rs  mod.rs  utils.rs
src/utils/widgets/: mod.rs
src/utils/widgets/link_copier/: builder.rs  component.rs  mod.rs  payloads.rs  widgets.rs
src/utils/widgets/linker_copier/: builder.rs  component.rs  mod.rs  widgets.rs
