[package]
name = "gtk-qq"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["./libs/*"]

[dependencies.relm4]
git = "https://github.com/Relm4/Relm4.git"
# next, 2022/05/25
rev = "968d09c9417dce6f84446948523e3befc4954d50"
features = ["macros", "libadwaita"]

[dependencies.ricq]
git = "https://github.com/lz1998/ricq.git"
# v0.1.10, master, 2022/06/08
rev = "38fff7007cb51bc39acc30087c3f042031a38eda"

[dependencies.widgets]
path = "./libs/widgets"

[dependencies.resource-loader]
path = "./libs/resource-loader"

[dependencies]
tokio = "1.18.2"
rand = "0.8.5"
async-trait = "0.1.53"
once_cell = "1.11.0"
rusqlite = "0.27.0"
reqwest = "0.11.10"
qrcode-png = "0.4.0"
typed-builder = "0.10"

[profile.release]
lto = true
