[package]
name = "gtk-qq"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["./libs/*"]

[dependencies.relm4]
git = "https://github.com/Relm4/Relm4.git"
# next, 2022/05/30
rev = "144f48319ffd7a889f28853df00e802cfc97dc26"
features = ["macros", "libadwaita"]

[dependencies.ricq]
git = "https://github.com/lz1998/ricq.git"
# v0.1.17, master, 2022/09/07
rev = "56620d755f35f7b6ade52991be62360b3377547c"

[dependencies.widgets]
path = "./libs/widgets"

[dependencies.resource-loader]
path = "./libs/resource-loader"

[dependencies]
tokio = { version = "1.18.2", features = ["sync"] }
rand = "0.8.5"
async-trait = "0.1.53"
once_cell = "1.11.0"
rusqlite = "0.27.0"
reqwest = "0.11.10"
qrcode-png = "0.4.0"
typed-builder = "0.10"
bincode = "1.3.3"
base64 = "0.13.0"

[profile.release]
lto = true
