[package]
name = "resource-loader"
version = "0.1.0"
edition = "2021"

[features]
default = ["async-ops"]

logger = ["log"]
async-ops = ["tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
state = "0.5"
derivative = "2.2"
dirs = "4.0"
log = { version = "0.4", optional = true }
tokio = { version = "1", optional = true, features = ["fs"] }
tempfile = "3.3"
[dev-dependencies]
serde_json = "1"
