[package]
name = "resource-loader"
version = "0.1.0"
edition = "2021"

[features]
default = []
logger = ["log"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
once_cell = "1.11"
derivative = "2.2"
dirs = "4.0"
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["fs"] }
tempfile = "3.3"
toml = "0.5.9"
tap = "1"
rand = "0.8.5"
xdg = "2"

[dev-dependencies]
serde_json = "1"

[dependencies.ricq]
git = "https://github.com/lz1998/ricq.git"
# v0.1.10, master, 2022/06/08
rev = "38fff7007cb51bc39acc30087c3f042031a38eda"
