[package]
name = "widgets"
version = "0.1.0"
edition = "2021"

[dependencies.relm4]
git = "https://github.com/Relm4/Relm4.git"
# next, 2022/05/30
rev = "144f48319ffd7a889f28853df00e802cfc97dc26"
features = ["macros", "libadwaita"]

[dependencies]
typed-builder = "0.10"

[dependencies.ricq]
git = "https://github.com/lz1998/ricq.git"
# v0.1.10, master, 2022/06/08
rev = "38fff7007cb51bc39acc30087c3f042031a38eda"
